--- a/todo/2020_03_23.md
+++ b/todo/2020_03_23.md
@@ -68,3 +68,7 @@ selector:pseudo-selector {
   color: blue;
 }
 ```
+
+## Documentation
+
+[Mémento des balises CSS](https://openclassrooms.com/fr/courses/1603881-apprenez-a-creer-votre-site-web-avec-html5-et-css3/1608902-memento-des-proprietes-css)
