feat: add 2020_04_05 course

--- a/courses/2020_03_25.md
+++ b/courses/2020_03_25.md
@@ -107,6 +107,7 @@ Pour palier au problème de superposition de contenu, on peut appliquer les `pad
 - [A Complete Guide to Flexbox](https://css-tricks.com/snippets/css/a-guide-to-flexbox/)
 - [Les concepts de base pour flexbox [mdn]](https://developer.mozilla.org/fr/docs/Web/CSS/CSS_Flexible_Box_Layout/Concepts_de_base_flexbox)
 - [flex [mdn]](https://developer.mozilla.org/fr/docs/Web/CSS/flex)
+- [Exo flexboxfroggy](https://flexboxfroggy.com/#fr)
 
 ### Position
 
